Fix Bluesky icon alignment with other social icons

--- a/css/main.scss
+++ b/css/main.scss
@@ -207,3 +207,11 @@ pre.highlight code,
   font-size: 12px;
   font-weight: 500;
 }
+
+/* Bluesky SVG Icon Alignment */
+.icon-social-bluesky {
+  display: inline-block;
+  vertical-align: middle;
+  width: 16px;
+  height: 16px;
+}
